@@ -370,7 +370,7 @@ static void theora_dispose_class (video_decoder_class_t *this) {
   free (this);
 }
 
-static void *init_plugin (xine_t *xine, void *data) {
+void *theora_init_plugin (xine_t *xine, void *data) {
   /*initialize our plugin*/
   theora_class_t *this;
   
@@ -390,13 +390,7 @@ static void *init_plugin (xine_t *xine, void *data) {
 
 static uint32_t supported_types[] = { BUF_VIDEO_THEORA, 0 };
 
-static const decoder_info_t dec_info_video = {
+const decoder_info_t dec_info_theora = {
   supported_types,   /* supported types */
   5                        /* priority        */
-};
-
-const plugin_info_t xine_plugin_info[] EXPORTED = {
-  /* type, API, "name", version, special_info, init_function */  
-  { PLUGIN_VIDEO_DECODER, 18, "theora", XINE_VERSION_CODE, &dec_info_video, init_plugin },
-  { PLUGIN_NONE, 0, "", 0, NULL, NULL }
 };
