@@ -5,14 +5,6 @@ AM_LDFLAGS = $(xineplug_ldflags)
 
 EXTRA_DIST = fooaudio.c
 
-if ENABLE_VORBIS
-vorbis_module = xineplug_decode_vorbis.la
-endif
-
-if ENABLE_SPEEX
-speex_module = xineplug_decode_speex.la
-endif
-
 if ENABLE_MUSEPACK
 musepack_module = xineplug_decode_mpc.la
 endif
@@ -54,8 +46,6 @@ $(top_builddir)/contrib/gsm610/libgsm610.la:
 xineplug_LTLIBRARIES = \
 	xineplug_decode_gsm610.la \
 	xineplug_decode_lpcm.la \
-	$(vorbis_module) \
-	$(speex_module) \
 	$(musepack_module) \
 	$(dts_module) \
 	$(mad_module) \
@@ -68,14 +58,6 @@ xineplug_decode_gsm610_la_CPPFLAGS = -I$(top_srcdir)/contrib/gsm610
 
 xineplug_decode_lpcm_la_SOURCES = xine_lpcm_decoder.c
 xineplug_decode_lpcm_la_LIBADD = $(XINE_LIB)
-
-xineplug_decode_vorbis_la_SOURCES = xine_vorbis_decoder.c
-xineplug_decode_vorbis_la_LIBADD = $(XINE_LIB) $(VORBIS_LIBS) $(OGG_LIBS)
-xineplug_decode_vorbis_la_CFLAGS = $(AM_CFLAGS) $(VORBIS_CFLAGS)
-
-xineplug_decode_speex_la_SOURCES = xine_speex_decoder.c
-xineplug_decode_speex_la_LIBADD = $(XINE_LIB) $(SPEEX_LIBS)
-xineplug_decode_speex_la_CFLAGS = $(AM_CFLAGS) $(SPEEX_CFLAGS)
 
 xineplug_decode_mpc_la_SOURCES = xine_musepack_decoder.c
 xineplug_decode_mpc_la_DEPENDENCIES = $(MPCDEC_DEPS)
